--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,59 @@ body{
 	text-align: center;
 	background:rgb(0,0,0);
 }
+header {
+	background: url();
+	text-align: center;
+	width: 100%;
+	height: auto;
+	background-size: cover;
+	background-attachment: fixed;
+	position: relative;
+	overflow: hidden;
+	border-radius: 0 0 85% 85% / 30%;
+	background:rgb(32,32,32,0.5);
+}
+header .overlay{
+	width: 100%;
+	height: 100%;
+	padding: 50px;
+	color: rgb(200,0,0);
+	text-shadow: 1px 1px 1px #333;
+  background-image: url('https://source.unsplash.com/1100x900/?audi-r8');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  font-size: 2em;
+  font-weight: 5em;
+  text-transform: uppercase;
+ /** background:rgb(32,32,32,0.3);**/
+	
+}
+
+h1 {
+	font-family: 'Dancing Script', cursive;
+	font-size: 80px;
+	margin-bottom: 30px;
+}
+
+h3, p {
+	font-family: 'Open Sans', sans-serif;
+	margin-bottom: 30px;
+}
+
+button {
+	border: none;
+	outline: none;
+	padding: 10px 20px;
+	border-radius: 50px;
+	color: #333;
+	background: #fff;
+	margin-bottom: 50px;
+	box-shadow: 0 3px 20px 0 #0000003b;
+}
+button:hover{
+	cursor: pointer;
+}
 h1{
 	font-size: 2em;
 	font-style: bold italic;
