--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ body{
 	background:rgb(0,0,0);
 }
 header {
-	background: url();
 	text-align: center;
 	width: 100%;
 	height: auto;
@@ -15,12 +14,13 @@ header {
 	overflow: hidden;
 	border-radius: 0 0 85% 85% / 30%;
 	background:rgb(32,32,32,0.5);
+	z-index: 3;
 }
 header .overlay{
 	width: 100%;
 	height: 100%;
 	padding: 50px;
-	color: rgb(200,0,0);
+	color: rgb(200,200,0);
 	text-shadow: 1px 1px 1px #333;
   background-image: url('https://source.unsplash.com/1100x900/?audi-r8');
   background-position: center;
@@ -29,6 +29,7 @@ header .overlay{
   font-size: 2em;
   font-weight: 5em;
   text-transform: uppercase;
+  z-index: -2;
  /** background:rgb(32,32,32,0.3);**/
 	
 }
