--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ h1{
 	opacity: 0;
 	top:0;
 	bottom:0;
-	transform: translate(-50% -50%)
+	transform: translate(-50% -50%);
 	color: #fff;
 	font-size: 25px;
 	pointer-events: none;
